Fixed text alignment in buttons with icons

--- a/static/style/global.css
+++ b/static/style/global.css
@@ -46,3 +46,6 @@ h2 {
   border: 3px solid orange;  /* creates padding around scroll thumb */
 }
 
+.pixel-art {
+  image-rendering: pixelated;
+}
